tests/outref/TBP003.ref
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_TABLE : Unknown table: MYTABLE
Error with syntax near (line 1, column 12):

INSERT INTO myTable VALUES (1, 2, "Name");
            ^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: INSERT INTO myTable VALUES (1, 2, "Name");
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_TABLE : Unknown table: MYTABLE
Error with syntax near (line 1, column 13):

INSERT INTO myTable (id, name) VALUES (1, "Emma");
            ^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: INSERT INTO myTable (id, name) VALUES (1, "Emma");
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_TABLE : Unknown table: MYTABLE
Error with syntax near (line 1, column 13):

INSERT INTO myTable (id, name) VALUES
            ^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: INSERT INTO myTable (id, name) VALUES
  (1, "Emma"),
  (2, "Jojo"),
  (3, "Max")
;
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_TABLE : Unknown table: MYTABLE3
Error with syntax near (line 2, column 15):

INSERT INTO myTable2
SELECT * from myTable3;
              ^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: INSERT INTO myTable2
SELECT * from myTable3;
[ERROR] PATH:LINENUM DATE TIME : ERR_FEATURE_NOT_IMPLEMENTED : Feature not implemented: INSERT INTO column_name DEFAULT VALUES
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: INSERT INTO theTable DEFAULT VALUES;
